--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
+    "swiper": "^11.1.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
