--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-spring": "8.0.27",
+    "react-use-gesture": "^9.1.3",
     "sass": "^1.77.8",
     "swiper": "^11.1.9",
     "typescript": "^4.9.5",
